{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 184,
  "lineage": "19ab719f-2c75-7661-b3f3-5406ee0fc087",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "poc01_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:905418044666:instance/i-0d3a84690a27966ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3a84690a27966ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "poc01-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0178ba082b23b55f2",
            "private_dns": "ip-10-0-0-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ecfce85d316597a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00437f5c820f028ea",
            "tags": {
              "Name": "poc01-ec2-instance",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-ec2-instance",
              "environment": "poc01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8222e72e68f24cc"
            ]
          },
          "dependencies": [
            "aws_key_pair.poc01_key",
            "aws_security_group.poc01_ec2_sg",
            "aws_subnet.poc01_private_subnet",
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc01_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:internet-gateway/igw-0204b460ce5e9c8f2",
            "id": "igw-0204b460ce5e9c8f2",
            "owner_id": "905418044666",
            "tags": {
              "Name": "poc01-igw",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-igw",
              "environment": "poc01"
            },
            "vpc_id": "vpc-0d006a1277b2641c2"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "poc01_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:route-table/rtb-07fcb611b2b844a0e",
            "id": "rtb-07fcb611b2b844a0e",
            "owner_id": "905418044666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0204b460ce5e9c8f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc01-public-route-table",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-public-route-table",
              "environment": "poc01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d006a1277b2641c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "poc01_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ca2cab5f6e5a78",
            "route_table_id": "rtb-07fcb611b2b844a0e",
            "subnet_id": "subnet-00437f5c820f028ea"
          },
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_route_table.poc01_public_route_table",
            "aws_subnet.poc01_private_subnet",
            "aws_vpc.poc01_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44f80d012a2a3d8",
            "route_table_id": "rtb-07fcb611b2b844a0e",
            "subnet_id": "subnet-06b98b0779dc9919e"
          },
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_route_table.poc01_public_route_table",
            "aws_subnet.poc01_private_subnet",
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "poc01_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:security-group/sg-0f8222e72e68f24cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8222e72e68f24cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240924053935597600000003",
            "name_prefix": "terraform-",
            "owner_id": "905418044666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc01-ec2-sg",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-ec2-sg",
              "environment": "poc01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d006a1277b2641c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc01_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:subnet/subnet-00437f5c820f028ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00437f5c820f028ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418044666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc01-private-subnet-1",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-private-subnet-1",
              "environment": "poc01"
            },
            "vpc_id": "vpc-0d006a1277b2641c2"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:subnet/subnet-06b98b0779dc9919e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b98b0779dc9919e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418044666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc01-private-subnet-2",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-private-subnet-2",
              "environment": "poc01"
            },
            "vpc_id": "vpc-0d006a1277b2641c2"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc01_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:vpc/vpc-0d006a1277b2641c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5cb5b0a8f078b77",
            "default_route_table_id": "rtb-0edf0c09ff5ece996",
            "default_security_group_id": "sg-0bbe69a3054ea4478",
            "dhcp_options_id": "dopt-07272d793cc365e0b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d006a1277b2641c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edf0c09ff5ece996",
            "owner_id": "905418044666",
            "tags": {
              "Name": "poc01-vpc",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-vpc",
              "environment": "poc01"
            }
          }
        }
      ]
    }
  ]
}